force-app/main/default/objects/Lead_Outbound__e/Lead_Outbound__e.object-meta.xml
<CustomObject>
    <label>Lead Outbound</label>
    <pluralLabel>Lead Outbound Events</pluralLabel>
</CustomObject>