force-app/main/default/objects/Lead_Outbound__e/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>