force-app/main/default/objects/Lead_Outbound__e/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <description>Id of the Salesforce Lead that was created.</description>
    <label>Lead Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>